232. Model 3: Building, fitting and evaluating a GRU-cell powered RNN

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -2299,28 +2299,28 @@
         "#print(x.shape)\n",
         "x = layers.LSTM(64)(x)\n",
         "#print(x.shape)\n",
-        "x = layers.Dense(64, activation=\"relu\")(x)\n",
+        "#x = layers.Dense(64, activation=\"relu\")(x)\n",
         "#print(x.shape)\n",
         "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
         "model_2 = tf.keras.Model(inputs, outputs, name=\"model_2_LSTM\")\n"
       ],
-      "execution_count": 61,
+      "execution_count": 84,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6Z8GuHDQdhqR",
-        "outputId": "0ab01dea-254d-4cb1-b395-a329218b2a06",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6Z8GuHDQdhqR",
+        "outputId": "8c3463ba-7896-4316-aa28-a9124d41d918"
       },
       "source": [
         "# Check model summary\n",
         "model_2.summary()"
       ],
-      "execution_count": 62,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -2329,22 +2329,20 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_5 (InputLayer)         [(None, 1)]               0         \n",
+            "input_13 (InputLayer)        [(None, 1)]               0         \n",
             "_________________________________________________________________\n",
             "text_vectorization_1 (TextVe (None, 15)                0         \n",
             "_________________________________________________________________\n",
             "embedding (Embedding)        (None, 15, 128)           1280000   \n",
             "_________________________________________________________________\n",
-            "lstm_4 (LSTM)                (None, 15, 64)            49408     \n",
+            "lstm_8 (LSTM)                (None, 15, 64)            49408     \n",
             "_________________________________________________________________\n",
-            "lstm_5 (LSTM)                (None, 64)                33024     \n",
+            "lstm_9 (LSTM)                (None, 64)                33024     \n",
             "_________________________________________________________________\n",
-            "dense_5 (Dense)              (None, 64)                4160      \n",
-            "_________________________________________________________________\n",
-            "dense_6 (Dense)              (None, 1)                 65        \n",
+            "dense_15 (Dense)             (None, 1)                 65        \n",
             "=================================================================\n",
-            "Total params: 1,366,657\n",
-            "Trainable params: 1,366,657\n",
+            "Total params: 1,362,497\n",
+            "Trainable params: 1,362,497\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
@@ -2363,17 +2361,17 @@
         "                optimizer=tf.keras.optimizers.Adam(),\n",
         "                metrics=[\"accuracy\"])\n"
       ],
-      "execution_count": 63,
+      "execution_count": 86,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Da8tcYcXiQKJ",
-        "outputId": "e9a1f7bf-cef9-47a6-b1cc-6ae6bc2713b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Da8tcYcXiQKJ",
+        "outputId": "668fd5fe-715e-4101-bbaa-1f4b221a563c"
       },
       "source": [
         "# Fit the model\n",
@@ -2384,22 +2382,22 @@
         "                              callbacks=[create_tensorboard_callback(dir_name=SAVE_DIR,\n",
         "                                                                     experiment_name=\"model_2_LSTM\")])"
       ],
-      "execution_count": 65,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Saving TensorBoard log files to: model_logs/model_2_LSTM/20210805-042141\n",
+            "Saving TensorBoard log files to: model_logs/model_2_LSTM/20210805-050609\n",
             "Epoch 1/5\n",
-            "215/215 [==============================] - 11s 25ms/step - loss: 0.2270 - accuracy: 0.9161 - val_loss: 0.6209 - val_accuracy: 0.7848\n",
+            "215/215 [==============================] - 8s 25ms/step - loss: 0.1353 - accuracy: 0.9543 - val_loss: 0.8974 - val_accuracy: 0.7756\n",
             "Epoch 2/5\n",
-            "215/215 [==============================] - 4s 18ms/step - loss: 0.1579 - accuracy: 0.9400 - val_loss: 0.6280 - val_accuracy: 0.7743\n",
+            "215/215 [==============================] - 4s 19ms/step - loss: 0.0751 - accuracy: 0.9702 - val_loss: 0.9520 - val_accuracy: 0.7730\n",
             "Epoch 3/5\n",
-            "215/215 [==============================] - 4s 18ms/step - loss: 0.1302 - accuracy: 0.9502 - val_loss: 0.8750 - val_accuracy: 0.7782\n",
+            "215/215 [==============================] - 4s 19ms/step - loss: 0.0606 - accuracy: 0.9727 - val_loss: 1.2613 - val_accuracy: 0.7664\n",
             "Epoch 4/5\n",
-            "215/215 [==============================] - 4s 18ms/step - loss: 0.1076 - accuracy: 0.9607 - val_loss: 0.9964 - val_accuracy: 0.7730\n",
+            "215/215 [==============================] - 4s 19ms/step - loss: 0.0539 - accuracy: 0.9769 - val_loss: 1.2710 - val_accuracy: 0.7730\n",
             "Epoch 5/5\n",
-            "215/215 [==============================] - 4s 19ms/step - loss: 0.0887 - accuracy: 0.9651 - val_loss: 1.0099 - val_accuracy: 0.7730\n"
+            "215/215 [==============================] - 4s 18ms/step - loss: 0.0488 - accuracy: 0.9778 - val_loss: 1.3250 - val_accuracy: 0.7638\n"
           ],
           "name": "stdout"
         }
@@ -2408,50 +2406,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Jh-FPRvVjE66",
-        "outputId": "40044400-77d5-46c6-b73a-4125a82b8c47",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jh-FPRvVjE66",
+        "outputId": "0f19c828-5dd9-4aa1-bcf6-04a748202a0e"
       },
       "source": [
         "# Make predictions with LSTM model\n",
         "model_2_pred_probs = model_2.predict(val_sentences)\n",
         "model_2_pred_probs[:10]"
       ],
-      "execution_count": 66,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[6.9324367e-02],\n",
-              "       [7.8267759e-01],\n",
-              "       [9.9996781e-01],\n",
-              "       [5.6826834e-02],\n",
-              "       [1.3350655e-04],\n",
-              "       [9.9919087e-01],\n",
-              "       [9.7507828e-01],\n",
-              "       [9.9997199e-01],\n",
-              "       [9.9994433e-01],\n",
-              "       [5.5422354e-01]], dtype=float32)"
+              "array([[1.7936410e-02],\n",
+              "       [7.1029997e-01],\n",
+              "       [9.9994183e-01],\n",
+              "       [1.5539649e-02],\n",
+              "       [9.4957628e-05],\n",
+              "       [9.9979049e-01],\n",
+              "       [9.8199582e-01],\n",
+              "       [9.9994290e-01],\n",
+              "       [9.9993563e-01],\n",
+              "       [3.2976753e-01]], dtype=float32)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 88
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MYhY0rlui64E",
-        "outputId": "7c9e0edb-2339-4d96-9e35-a5c13f1ac5aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MYhY0rlui64E",
+        "outputId": "7c9e0edb-2339-4d96-9e35-a5c13f1ac5aa"
       },
       "source": [
         "# Convert model 2 pred probs to labels\n",
@@ -2477,11 +2475,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fFjDUmg6jj2j",
-        "outputId": "f32a877d-0ad1-4a8b-dac7-755fe580273d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fFjDUmg6jj2j",
+        "outputId": "f32a877d-0ad1-4a8b-dac7-755fe580273d"
       },
       "source": [
         "# Calculate model 2 results\n",
@@ -2511,11 +2509,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sttis0-bj0VD",
-        "outputId": "aba3e37d-a2be-415e-c331-5effe7069a0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sttis0-bj0VD",
+        "outputId": "aba3e37d-a2be-415e-c331-5effe7069a0f"
       },
       "source": [
         "baseline_results"
@@ -2540,9 +2538,250 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "HpwXm7qXkAO2"
+      },
+      "source": [
+        "### Model 3 : GRU\n",
+        "\n",
+        "Another popular and effective RNN component is the GRU or gated recurrent unit.\n",
+        "\n",
+        "The GRU cell has similar features to an LSTM cell but has less parameters.\n",
+        "https://www.tensorflow.org/api_docs/python/tf/keras/layers/GRU\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y1uFhbbekRE4"
+      },
+      "source": [
+        "# Build an RNN using the GRU cell\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "inputs = layers.Input(shape=(1, ), dtype=\"string\")\n",
+        "x = text_vectorizer(inputs)\n",
+        "x = embedding(x)\n",
+        "x = layers.GRU(64)(x)\n",
+        "#print(x.shape)\n",
+        "#x = layers.GRU(64, return_sequences=True)(x) # when you're stacking LSTM/GRU set return sequence = True\n",
+        "#print(x.shape)\n",
+        "#x = layers.LSTM(64, return_sequences=True)(x)\n",
+        "#print(x.shape)\n",
+        "#x = layers.GRU(64)(x)\n",
+        "#print(x.shape)\n",
+        "# Dense layer\n",
+        "#x = layers.Dense(64, activation=\"relu\")(x)\n",
+        "#print(x.shape)\n",
+        "#x = layers.GlobalAveragePooling1D()(x)\n",
+        "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "model_3 = tf.keras.Model(inputs, outputs, name=\"model_3_GRU\")"
+      ],
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "80LmHAbfmEV0",
+        "outputId": "1a02a0af-f947-4ba3-a9c2-0e1ae32fa641",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Model 3 Summary\n",
+        "model_3.summary()"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_3_GRU\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_14 (InputLayer)        [(None, 1)]               0         \n",
+            "_________________________________________________________________\n",
+            "text_vectorization_1 (TextVe (None, 15)                0         \n",
+            "_________________________________________________________________\n",
+            "embedding (Embedding)        (None, 15, 128)           1280000   \n",
+            "_________________________________________________________________\n",
+            "gru_10 (GRU)                 (None, 64)                37248     \n",
+            "_________________________________________________________________\n",
+            "dense_16 (Dense)             (None, 1)                 65        \n",
+            "=================================================================\n",
+            "Total params: 1,317,313\n",
+            "Trainable params: 1,317,313\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V2uGFE0imKiI"
+      },
+      "source": [
+        "# Compile the model\n",
+        "model_3.compile(loss=\"binary_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])"
+      ],
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lodsw05YmW50",
+        "outputId": "d4d8f889-5d97-427c-f018-7e0114226cb5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Fit the model\n",
+        "model_3_history = model_3.fit(train_sentences, \n",
+        "                              y = train_labels,\n",
+        "                              epochs=5,\n",
+        "                              validation_data=(val_sentences, val_labels),\n",
+        "                              callbacks=[create_tensorboard_callback(dir_name=SAVE_DIR,\n",
+        "                                                                     experiment_name=\"model_3_GRU\")])"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Saving TensorBoard log files to: model_logs/model_3_GRU/20210805-050932\n",
+            "Epoch 1/5\n",
+            "215/215 [==============================] - 5s 19ms/step - loss: 0.1564 - accuracy: 0.9361 - val_loss: 0.8136 - val_accuracy: 0.7769\n",
+            "Epoch 2/5\n",
+            "215/215 [==============================] - 3s 15ms/step - loss: 0.0715 - accuracy: 0.9734 - val_loss: 0.8685 - val_accuracy: 0.7756\n",
+            "Epoch 3/5\n",
+            "215/215 [==============================] - 3s 15ms/step - loss: 0.0539 - accuracy: 0.9761 - val_loss: 1.0745 - val_accuracy: 0.7677\n",
+            "Epoch 4/5\n",
+            "215/215 [==============================] - 3s 16ms/step - loss: 0.0505 - accuracy: 0.9765 - val_loss: 1.0286 - val_accuracy: 0.7743\n",
+            "Epoch 5/5\n",
+            "215/215 [==============================] - 3s 15ms/step - loss: 0.0462 - accuracy: 0.9781 - val_loss: 1.3075 - val_accuracy: 0.7690\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W_Nv0Y4juCOy",
+        "outputId": "f595891f-5f5c-419b-ac4e-42ca1eb37722",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make some predictions with our GRU model\n",
+        "model_3_pred_probs = model_3.predict(val_sentences)\n",
+        "model_3_pred_probs[:10]"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4.1969931e-03],\n",
+              "       [6.7512083e-01],\n",
+              "       [9.9982822e-01],\n",
+              "       [1.9256279e-01],\n",
+              "       [8.0505015e-05],\n",
+              "       [9.9940622e-01],\n",
+              "       [8.4172922e-01],\n",
+              "       [9.9992263e-01],\n",
+              "       [9.9988127e-01],\n",
+              "       [9.7486579e-01]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 95
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ce88OoJsuUs8",
+        "outputId": "ef019de7-e620-4cd7-d806-721f36edac5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Convert model 3 pred probs to labels\n",
+        "model_3_preds = tf.squeeze(tf.round(model_3_pred_probs))\n",
+        "model_3_preds[:10]"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=array([0., 1., 1., 0., 0., 1., 1., 1., 1., 1.], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F0E8i0V8ujJE",
+        "outputId": "e08ecbb5-1cb1-4f77-d2e8-c5dfe4c77815",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate model 3 results\n",
+        "model_3_results = calculate_results(y_true=val_labels,\n",
+        "                                    y_pred=model_3_preds)\n",
+        "model_3_results"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 76.9028871391076,\n",
+              " 'f1': 0.766802361272573,\n",
+              " 'precision': 0.7708613696015271,\n",
+              " 'recall': 0.7690288713910761}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ntez4h9ZuvwP"
       },
       "source": [
         ""
