233. Model 4: Building, fitting and evaluating a bidirectional RNN model

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -2779,9 +2779,284 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "Ntez4h9ZuvwP"
+      },
+      "source": [
+        "### Model 4 : Bidirectional RNN\n",
+        "\n",
+        "Normal RNN's go from left to right (just like you'd read an English sentence), however, a bidirectional RNN goes from right to left as well as left to right.\n",
+        "\n",
+        "Another popular and effective RNN component is the Bi-directional.\n",
+        "https://www.tensorflow.org/api_docs/python/tf/keras/layers/Bidirectional"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "13n1zzwhv73e"
+      },
+      "source": [
+        "## Build a birectional RNN in TensorFlow\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "inputs = layers.Input(shape=(1, ), dtype=\"string\")\n",
+        "x = text_vectorizer(inputs)\n",
+        "x = embedding(x)\n",
+        "#x = layers.Bidirectional(layers.LSTM(64, return_sequences=True))(x)\n",
+        "#print(x.shape)\n",
+        "x = layers.Bidirectional(layers.LSTM(64))(x)\n",
+        "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "model_4 = tf.keras.Model(inputs, outputs, name=\"model_4_bidirectional\")"
+      ],
+      "execution_count": 104,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sB23BJLM1Su4",
+        "outputId": "e6c8ef1d-c1ac-4b68-8930-5750597594da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get a summary\n",
+        "model_4.summary()"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_4_bidirectional\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_19 (InputLayer)        [(None, 1)]               0         \n",
+            "_________________________________________________________________\n",
+            "text_vectorization_1 (TextVe (None, 15)                0         \n",
+            "_________________________________________________________________\n",
+            "embedding (Embedding)        (None, 15, 128)           1280000   \n",
+            "_________________________________________________________________\n",
+            "bidirectional_6 (Bidirection (None, 128)               98816     \n",
+            "_________________________________________________________________\n",
+            "dense_20 (Dense)             (None, 1)                 129       \n",
+            "=================================================================\n",
+            "Total params: 1,378,945\n",
+            "Trainable params: 1,378,945\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "796azQh90iSm"
+      },
+      "source": [
+        "# Compile the model\n",
+        "model_4.compile(loss=\"binary_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])"
+      ],
+      "execution_count": 106,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tixVJ1EY2F9v",
+        "outputId": "9b4bd393-d88e-483a-de74-f9b22153a9e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Fit the model\n",
+        "model_4.fit(train_sentences, \n",
+        "            train_labels,\n",
+        "            epochs=5,\n",
+        "            validation_data=(val_sentences, val_labels),\n",
+        "            callbacks=[create_tensorboard_callback(dir_name=SAVE_DIR,\n",
+        "                                                   experiment_name=\"model_4_bidirectional\")])"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Saving TensorBoard log files to: model_logs/model_4_bidirectional/20210805-054650\n",
+            "Epoch 1/5\n",
+            "215/215 [==============================] - 8s 25ms/step - loss: 0.0994 - accuracy: 0.9708 - val_loss: 0.9817 - val_accuracy: 0.7638\n",
+            "Epoch 2/5\n",
+            "215/215 [==============================] - 4s 19ms/step - loss: 0.0453 - accuracy: 0.9785 - val_loss: 1.3757 - val_accuracy: 0.7703\n",
+            "Epoch 3/5\n",
+            "215/215 [==============================] - 4s 19ms/step - loss: 0.0412 - accuracy: 0.9801 - val_loss: 1.3414 - val_accuracy: 0.7585\n",
+            "Epoch 4/5\n",
+            "215/215 [==============================] - 4s 19ms/step - loss: 0.0360 - accuracy: 0.9820 - val_loss: 1.4662 - val_accuracy: 0.7585\n",
+            "Epoch 5/5\n",
+            "215/215 [==============================] - 4s 18ms/step - loss: 0.0385 - accuracy: 0.9820 - val_loss: 1.6279 - val_accuracy: 0.7612\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fcff8c60f50>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "89_GrVLi2aJa",
+        "outputId": "4036529f-1181-40ae-c739-6a7e94de4247",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check model predictions\n",
+        "model_4_pred_probs = model_4.predict(val_sentences)\n",
+        "model_4_pred_probs[:10]"
+      ],
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[8.0896690e-03],\n",
+              "       [7.0129943e-01],\n",
+              "       [9.9995267e-01],\n",
+              "       [2.8321436e-01],\n",
+              "       [4.4531703e-06],\n",
+              "       [9.9993348e-01],\n",
+              "       [9.9660707e-01],\n",
+              "       [9.9999261e-01],\n",
+              "       [9.9996424e-01],\n",
+              "       [9.9977249e-01]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AVhVnnK02pnB",
+        "outputId": "078bfcbb-a0ff-450a-f4c4-89d7e1f9af5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Convert model 4 pred probs to labels\n",
+        "model_4_preds = tf.squeeze(tf.round(model_4_pred_probs))\n",
+        "model_4_preds[:10]"
+      ],
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=array([0., 1., 1., 0., 0., 1., 1., 1., 1., 1.], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wZsMhZV-2xS2",
+        "outputId": "6debb985-4fe9-4bba-860d-a8474cc610d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate results of our bidirectional model\n",
+        "model_4_results = calculate_results(y_true=val_labels,\n",
+        "                                    y_pred=model_4_preds)\n",
+        "model_4_results"
+      ],
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 76.11548556430446,\n",
+              " 'f1': 0.7597317731418467,\n",
+              " 'precision': 0.761395918264994,\n",
+              " 'recall': 0.7611548556430446}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hVrWCxBj3ARP",
+        "outputId": "5b90f68b-8975-47b8-a709-36e116af5c0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_3_results"
+      ],
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 76.9028871391076,\n",
+              " 'f1': 0.766802361272573,\n",
+              " 'precision': 0.7708613696015271,\n",
+              " 'recall': 0.7690288713910761}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UWiBUuyp3L2z"
       },
       "source": [
         ""
