--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -2816,11 +2816,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sB23BJLM1Su4",
-        "outputId": "e6c8ef1d-c1ac-4b68-8930-5750597594da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sB23BJLM1Su4",
+        "outputId": "e6c8ef1d-c1ac-4b68-8930-5750597594da"
       },
       "source": [
         "# Get a summary\n",
@@ -2871,11 +2871,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tixVJ1EY2F9v",
-        "outputId": "9b4bd393-d88e-483a-de74-f9b22153a9e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tixVJ1EY2F9v",
+        "outputId": "9b4bd393-d88e-483a-de74-f9b22153a9e5"
       },
       "source": [
         "# Fit the model\n",
@@ -2922,11 +2922,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "89_GrVLi2aJa",
-        "outputId": "4036529f-1181-40ae-c739-6a7e94de4247",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "89_GrVLi2aJa",
+        "outputId": "4036529f-1181-40ae-c739-6a7e94de4247"
       },
       "source": [
         "# Check model predictions\n",
@@ -2961,11 +2961,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AVhVnnK02pnB",
-        "outputId": "078bfcbb-a0ff-450a-f4c4-89d7e1f9af5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AVhVnnK02pnB",
+        "outputId": "078bfcbb-a0ff-450a-f4c4-89d7e1f9af5f"
       },
       "source": [
         "# Convert model 4 pred probs to labels\n",
@@ -2991,11 +2991,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wZsMhZV-2xS2",
-        "outputId": "6debb985-4fe9-4bba-860d-a8474cc610d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wZsMhZV-2xS2",
+        "outputId": "6debb985-4fe9-4bba-860d-a8474cc610d6"
       },
       "source": [
         "# Calculate results of our bidirectional model\n",
@@ -3023,43 +3023,61 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "hVrWCxBj3ARP",
-        "outputId": "5b90f68b-8975-47b8-a709-36e116af5c0f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "LcgFrN9E5ey3"
       },
       "source": [
-        "model_3_results"
-      ],
-      "execution_count": 113,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'accuracy': 76.9028871391076,\n",
-              " 'f1': 0.766802361272573,\n",
-              " 'precision': 0.7708613696015271,\n",
-              " 'recall': 0.7690288713910761}"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 113
-        }
+        "## Convolution Neural Networks for Text(and other types of sequences)\n",
+        "\n",
+        "We've use CNNs for images but images are typically 2D (height x width)... howver our text data is 1D.\n",
+        "\n",
+        "Previously we've used Conv2D for our image data but we're going to use Conv1D.\n",
+        "The typical structure of a Conv1D model for  sequences (in our case, text) :\n",
+        "\n",
+        "```\n",
+        "Inputs(text) -> Tokenization -> Embedding -> Layer(s) (typically  Conv1D + pooling) -> Outputs (class probabilities)\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UWiBUuyp3L2z"
+      },
+      "source": [
+        "### Model 5 : Conv1D\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UWiBUuyp3L2z"
+        "id": "rEHuArl464ba"
       },
       "source": [
-        ""
+        "# Test out our embedding layer, Conv1D layer and max pooling\n",
+        "embedding_test = embedding(text_vectorizer([\"this is a test sentence\"])) # turn target sequence into embedding\n",
+        " "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9-8Md3iN5Tln"
+      },
+      "source": [
+        "# Create the model 5\n",
+        "# Test out our\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "inputs = layers.Input(shape=(1, ), dtype=\"string\")\n",
+        "x = text_vectorizer(inputs)\n",
+        "x = embedding(x)\n",
+        "x = layers.Conv1D()\n",
+        "print x.shape"
       ],
       "execution_count": null,
       "outputs": []
