236. Using TensorFlow Hub for pretrained word embeddings (transfer learning for NLP)

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -3267,11 +3267,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BClmoetYk84l",
-        "outputId": "d968fcb5-059f-4819-c1d0-52208fc2fcd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BClmoetYk84l",
+        "outputId": "d968fcb5-059f-4819-c1d0-52208fc2fcd6"
       },
       "source": [
         "# Fit the model\n",
@@ -3306,11 +3306,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G7T_6XpXlOnz",
-        "outputId": "243db4b1-68a7-4af1-e7bf-77e47a29c021",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G7T_6XpXlOnz",
+        "outputId": "243db4b1-68a7-4af1-e7bf-77e47a29c021"
       },
       "source": [
         "# Make some predictions with our Conv1D model\n",
@@ -3345,11 +3345,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G5kARGG0002_",
-        "outputId": "a33ac12e-7c63-43e9-927a-facdcfb83204",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G5kARGG0002_",
+        "outputId": "a33ac12e-7c63-43e9-927a-facdcfb83204"
       },
       "source": [
         "# Convert preds for model 5 into lables\n",
@@ -3375,11 +3375,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B4VjFGrC1B8a",
-        "outputId": "2260ee11-eb2b-4579-fd0c-5b4e76e1f355",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B4VjFGrC1B8a",
+        "outputId": "2260ee11-eb2b-4579-fd0c-5b4e76e1f355"
       },
       "source": [
         "# Evaluate model 5 predictions\n",
@@ -3409,11 +3409,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tliUNtZA1X9R",
-        "outputId": "1ee4f23b-e4be-4b52-9b1a-9133d7a1817b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tliUNtZA1X9R",
+        "outputId": "1ee4f23b-e4be-4b52-9b1a-9133d7a1817b"
       },
       "source": [
         "baseline_results"
@@ -3438,15 +3438,81 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "zUIN6ezw1jL7"
       },
       "source": [
-        ""
+        "## Model 6 : Tensorflow Hub Pretrained Sentence Encoder\n",
+        "\n",
+        "Now we've built a few of our models, let's try and use transfer learning for NLP, specifically using TensorFlow Hub's Universal Sentence Encoder :\n",
+        "https://tfhub.dev/google/universal-sentence-encoder/4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BV76D_LX2MVP",
+        "outputId": "e574c0b7-f7da-48c9-dede-d5b5a2c92bd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import tensorflow_hub as hub\n",
+        "embed = hub.load(\"https://tfhub.dev/google/universal-sentence-encoder/4\")\n",
+        "embed_samples=embed([ sample_sentence,  \n",
+        "                     \"When you call the universal sentence encoder on a sentence, it turns it into numbers.\"])\n",
+        "\n",
+        "print(embed_samples[0][:50]) \n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tf.Tensor(\n",
+            "[-0.01157027  0.0248591   0.02878048 -0.012715    0.03971538  0.0882776\n",
+            "  0.02680985  0.05589838 -0.01068729 -0.00597292  0.00639323 -0.0181952\n",
+            "  0.00030814  0.09105888  0.05874645 -0.03180628  0.01512474 -0.05162929\n",
+            "  0.00991367 -0.06865346 -0.04209305  0.0267898   0.03011008  0.00321069\n",
+            " -0.00337971 -0.04787356  0.02266719 -0.00985925 -0.04063613 -0.01292093\n",
+            " -0.04666384  0.056303   -0.03949255  0.00517688  0.02495828 -0.07014441\n",
+            "  0.02871508  0.04947684 -0.00633978 -0.08960193  0.02807117 -0.00808362\n",
+            " -0.01360601  0.0599865  -0.10361787 -0.05195374  0.00232955 -0.0233253\n",
+            " -0.03758105  0.03327729], shape=(50,), dtype=float32)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ES8mdLRg5N0v",
+        "outputId": "19ac4126-6f9e-499b-cc0f-412faf6a3e94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "embed_samples[0].shape  # 512 feature vector"
+      ],
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TensorShape([512])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 93
+        }
+      ]
     }
   ]
 }
